--- a/src/Interfaz/Menu.form
+++ b/src/Interfaz/Menu.form
@@ -41,50 +41,46 @@
         <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
           <Color blue="ff" green="ff" red="ff" type="rgb"/>
         </Property>
+        <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+          <Dimension value="[700, 500]"/>
+        </Property>
       </Properties>
 
       <Layout>
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
-              <Group type="102" alignment="1" attributes="0">
+              <Group type="102" attributes="0">
+                  <EmptySpace min="-2" pref="238" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="1" attributes="0">
-                      <Group type="102" alignment="0" attributes="0">
-                          <EmptySpace min="-2" pref="231" max="-2" attributes="0"/>
-                          <Group type="103" groupAlignment="0" attributes="0">
-                              <Component id="BT_RegistrarExpediente" max="32767" attributes="0"/>
-                              <Component id="BT_registrarDP" pref="215" max="32767" attributes="0"/>
-                          </Group>
-                      </Group>
-                      <Group type="102" alignment="1" attributes="0">
-                          <EmptySpace max="32767" attributes="0"/>
-                          <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                              <Component id="BT_visualizar" alignment="1" max="32767" attributes="0"/>
-                              <Component id="BT_registrarMov" max="32767" attributes="0"/>
-                              <Component id="BT_registrarFinal" max="32767" attributes="0"/>
-                              <Component id="BT_buscarExpediente" max="32767" attributes="0"/>
-                          </Group>
+                      <Component id="BT_registrarDP" alignment="0" min="-2" pref="225" max="-2" attributes="0"/>
+                      <Group type="103" alignment="1" groupAlignment="0" max="-2" attributes="0">
+                          <Component id="BT_visualizar" alignment="1" min="-2" pref="225" max="-2" attributes="0"/>
+                          <Component id="BT_registrarMov" min="-2" pref="225" max="-2" attributes="0"/>
+                          <Component id="BT_registrarFinal" min="-2" pref="225" max="-2" attributes="0"/>
+                          <Component id="BT_buscarExpediente" min="-2" pref="225" max="-2" attributes="0"/>
+                          <Component id="BT_RegistrarExpediente" alignment="0" min="-2" pref="225" max="-2" attributes="0"/>
                       </Group>
                   </Group>
-                  <EmptySpace min="-2" pref="254" max="-2" attributes="0"/>
+                  <EmptySpace pref="237" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
         <DimensionLayout dim="1">
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="0" attributes="0">
-                  <EmptySpace min="-2" pref="103" max="-2" attributes="0"/>
-                  <Component id="BT_registrarDP" min="-2" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="123" max="-2" attributes="0"/>
+                  <Component id="BT_registrarDP" min="-2" pref="25" max="-2" attributes="0"/>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
-                  <Component id="BT_RegistrarExpediente" min="-2" max="-2" attributes="0"/>
+                  <Component id="BT_RegistrarExpediente" min="-2" pref="25" max="-2" attributes="0"/>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
-                  <Component id="BT_visualizar" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace min="-2" pref="45" max="-2" attributes="0"/>
-                  <Component id="BT_registrarMov" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace min="-2" pref="32" max="-2" attributes="0"/>
-                  <Component id="BT_registrarFinal" min="-2" max="-2" attributes="0"/>
+                  <Component id="BT_visualizar" min="-2" pref="25" max="-2" attributes="0"/>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
-                  <Component id="BT_buscarExpediente" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace pref="114" max="32767" attributes="0"/>
+                  <Component id="BT_registrarMov" min="-2" pref="25" max="-2" attributes="0"/>
+                  <EmptySpace type="separate" max="-2" attributes="0"/>
+                  <Component id="BT_registrarFinal" min="-2" pref="25" max="-2" attributes="0"/>
+                  <EmptySpace type="separate" max="-2" attributes="0"/>
+                  <Component id="BT_buscarExpediente" min="-2" pref="25" max="-2" attributes="0"/>
+                  <EmptySpace pref="137" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -92,6 +88,9 @@
       <SubComponents>
         <Component class="javax.swing.JButton" name="BT_RegistrarExpediente">
           <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Microsoft PhagsPa" size="12" style="0"/>
+            </Property>
             <Property name="text" type="java.lang.String" value="Registrar Expediente"/>
           </Properties>
           <Events>
@@ -100,6 +99,9 @@
         </Component>
         <Component class="javax.swing.JButton" name="BT_registrarMov">
           <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Microsoft PhagsPa" size="12" style="0"/>
+            </Property>
             <Property name="text" type="java.lang.String" value="Registrar Movimientos"/>
           </Properties>
           <Events>
@@ -108,6 +110,9 @@
         </Component>
         <Component class="javax.swing.JButton" name="BT_registrarFinal">
           <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Microsoft PhagsPa" size="12" style="0"/>
+            </Property>
             <Property name="text" type="java.lang.String" value="Registrar Finalizaci&#xf3;n de Tr&#xe1;mite"/>
             <Property name="toolTipText" type="java.lang.String" value=""/>
           </Properties>
@@ -117,6 +122,9 @@
         </Component>
         <Component class="javax.swing.JButton" name="BT_buscarExpediente">
           <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Microsoft PhagsPa" size="12" style="0"/>
+            </Property>
             <Property name="text" type="java.lang.String" value="Buscar Expediente"/>
           </Properties>
           <Events>
@@ -125,6 +133,9 @@
         </Component>
         <Component class="javax.swing.JButton" name="BT_registrarDP">
           <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Microsoft PhagsPa" size="12" style="0"/>
+            </Property>
             <Property name="text" type="java.lang.String" value="Registrar dependencia"/>
           </Properties>
           <Events>
@@ -133,6 +144,9 @@
         </Component>
         <Component class="javax.swing.JButton" name="BT_visualizar">
           <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Microsoft PhagsPa" size="12" style="0"/>
+            </Property>
             <Property name="text" type="java.lang.String" value="Visualizar Expedientes Registrados"/>
           </Properties>
           <Events>
